@@ -8142,16 +8142,13 @@
 
 (define_expand "cbranchcc4"
   [(set (pc)
-        (if_then_else (match_operator 0 "s390_eqne_operator"
+        (if_then_else (match_operator 0 "s390_comparison"
         	       [(match_operand 1 "cc_reg_operand" "")
-                        (match_operand 2 "const0_operand" "")])
+                        (match_operand 2 "const_int_operand" "")])
 		      (label_ref (match_operand 3 "" ""))
                       (pc)))]
-  "TARGET_HARD_FLOAT"
-  "s390_emit_jump (operands[3],
-    s390_emit_compare (GET_CODE (operands[0]), operands[1], operands[2]));
-   DONE;")
-
+  ""
+  "")
 
 
 ;;
